solving issues in swagger doc
